# linkedinbot

./: CMakeLists.txt  LICENSE  README.md
include/: Message.h  MessageCreator.h  Person.h
msgs/: finalmsg.txt  templatemsg.txt
src/: MessageCreator.cpp  Person.cpp  main.cpp
